fix: SliderImages Container overflow on Iphone fixed; slider.css file refactored and organized

--- a/src/components/ui/slider/Slider.css
+++ b/src/components/ui/slider/Slider.css
@@ -1,7 +1,5 @@
 .slider-box {
-    display: grid;
-    height: 100%;
-    width: min(100%, 100vw);
+    display: grid;  
     /* margin-right: 40px;
     margin-left: 40px; */
 }
@@ -12,14 +10,13 @@
 }
 
 .slider-image {
-    position: relative;
+    width: calc(100% - 40px);
+
     z-index: 3;
-    aspect-ratio: 1/1;
-    width: 100%;
-    max-width: calc(100% - 40px);
-    max-height: 1000px;
     border-radius: 5%;
     object-fit: cover;
+    aspect-ratio: 1/1;
+
     -webkit-box-shadow: 11px 11px 21px -10px rgba(0,0,0,0.69);
     -moz-box-shadow: 11px 11px 21px -10px rgba(0,0,0,0.69);
     box-shadow: 11px 11px 21px -10px rgba(0,0,0,0.69);
@@ -31,17 +28,18 @@
 }
 
 .slider-image-behind-box{
-    display: grid;
-    z-index: 0;
+    width: calc(100% - 40px);
 
     position: relative;
-    aspect-ratio: 1/1;
-    width: calc(100% - 40px);
     bottom: -20px;
     left: 40px;
-    max-width: 1000px;
-    max-height: 1000px;
+
+    z-index: 0;
     cursor: pointer;
+    aspect-ratio: 1/1;
+
+    display: grid;
+
     transition: 0.3s;
 }
 
@@ -49,29 +47,14 @@
     transform: scale(1.05);
 }
 
-.slider-image-behind{
-    grid-column: 1;
-    grid-row: 1;
-
-    aspect-ratio: 1/1;
-    width: 100%;
-    max-width: 1000px;
-    max-height: 1000px;
-    object-fit: cover;
-    border-radius: 5%;
-
-    transition: 0.3s;
-    -webkit-box-shadow: 11px 11px 21px -10px rgba(0,0,0,0.69);
-    -moz-box-shadow: 11px 11px 21px -10px rgba(0,0,0,0.69);
-    box-shadow: 11px 11px 21px -10px rgba(0,0,0,0.69);
-}
-
 .slider-button {
     grid-column: 1;
     grid-row: 1;
-    z-index: 2;
-    width: min-content;
+
+    width: 40px;
     height: 40px;
+
+    z-index: 2;
     justify-self: end;
     align-self: center;
     position: relative;
@@ -82,27 +65,46 @@
 .slider-image-behind-cover {
     grid-row: 1;
     grid-column: 1;
+
     width: 100%;
-    height: 100%;
+
+    z-index: 1;
     border-radius: 5%;
     background: linear-gradient(-50deg, var(--pri-o), transparent);
-    z-index: 1;
+}
+
+.slider-image-behind{
+    grid-column: 1;
+    grid-row: 1;
+
+    width: 100%;
+
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 5%;
+    transition: 0.3s;
+    -webkit-box-shadow: 11px 11px 21px -10px rgba(0,0,0,0.69);
+    -moz-box-shadow: 11px 11px 21px -10px rgba(0,0,0,0.69);
+    box-shadow: 11px 11px 21px -10px rgba(0,0,0,0.69);
 }
 
 @media only screen and (max-width: 500px) {
     .slider-image {
-        max-width: calc(100% - 30px);
+        width: 100%;
+        max-width: calc(100% - 40px);
     }
 
     .slider-image-behind-box{
         width: calc(100% - 30px);
-        bottom: -20px;
+
         left: 30px;
     }
 
     .slider-button {
         height: 25px;
+        width: 25px;
+
+        left: -5px;
         justify-self: end;
-        left: -2px;
     }
 }
